--- a/style.css
+++ b/style.css
@@ -439,3 +439,108 @@ html ::-webkit-scrollbar{
     }
 }
 /* contact end */
+
+
+/* blog start */
+#blogs{
+    width: 100%;
+}
+
+#blogs .heading7{
+    text-align: center;
+    font-size: 30px;
+    color: black;
+    font-weight: bold;
+}
+
+#blogs .heading7 span{
+    color: #b2744c;
+}
+
+#blogs .container{
+    margin-top: 60px;
+}
+
+#blogs h5{
+    color: #b2744c;
+}
+
+#blog-btn{
+    width: 200px;
+    height: 36px;
+    border: none;
+    color: white;
+    background: #b2744c;
+    cursor: pointer;
+}
+
+
+/* foter start */
+
+#footer{
+    width: 100%;
+    background: #b2744c;
+    margin-top: 50px;
+}
+
+.footer-logo img{
+    width: 100px;
+    border-radius: 10px;
+    margin-top: 30px;
+    cursor: pointer;
+}
+
+.social-links i{
+    font-size: 17px;
+    margin-left: 10px;
+    margin-top: 30px;
+    padding: 10px;
+    background: black;
+    color: white;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.credits{
+    color: white;
+    margin-top: 20px;
+    text-shadow: 0px 0px 1px black;
+}
+
+.credits a{
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
+
+#credits a span{
+    color: black;
+}
+
+.copyright span{
+    color: black;
+}
+
+html{
+    scroll-behavior: smooth;
+}
+
+.arrow{
+    position: fixed;
+    height: 50px;
+    bottom: 40px;
+    right: 50px;
+    text-align: center;
+    line-height: 50px;
+}
+
+.arrow img{
+    border-radius: 50%;
+}
+/* footer end */
+
+
+
+
+
+/* blog end */
